# nl2sql

./: README.md  pyproject.toml
src/nl2sql/: .env  __init__.py  main.py  main2.py
